--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <h3>Facebook</h3>
       </a>
     </div>
+    <div class="Twitter">
+      <a href="https://www.tiktok.com/@pavorecords_?_t=8dzguqSBwLW&_r=1" target="_blank" rel="noopener noreferrer">
+        <h3>TikTok</h3>
+      </a>
+    </div>  
     <div class="Instagram">
       <a href="https://instagram.com/pavorecords_?igshid=MjEwN2IyYWYwYw==" target="_blank" rel="noopener noreferrer">
         <h3>Instagram</h3>
