--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </a>
     </div>
     <div class="Portfolio">
-      <a href="https://shubhamashish33.github.io/aboutmev2/" target="_blank" rel="noopener noreferrer">
+      <a href="#" target="_blank" rel="noopener noreferrer">
         <h3>Portafolio <br>
           (proximamente)</h3>
       </a>
